--- a/MauiApp2/MainPage.xaml
+++ b/MauiApp2/MainPage.xaml
@@ -6,7 +6,7 @@
         <VerticalStackLayout Spacing="15" Padding="20">
             <Label Text = "Enter a Phoneword"
                FontSize ="20"/>
-            <Entry x:Name = "PhoneNumber"
+        <Entry x:Name = "PhoneNumberText"
                Text = "1-555-NETMAUI" />
             <Button x:Name = "TranslateButton"
                 Text = "Translate"
